--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <center>
-    <h1>This site is takeovered for reporting...</h1><br><h3>By Umapati11o4</h3></center>
+    <h1>This Site Is Takeovered For Reporting...</h1><br><h3>By Umapati11o4</h3></center>
 </body>
 </html>
